Added changes after review